--- a/contact-form/index.html
+++ b/contact-form/index.html
@@ -80,7 +80,7 @@
 											</div>
 										</div>
 									</form>
-									<div class="w-100 social-media mt-5">
+									<!-- <div class="w-100 social-media mt-5">
 										<h3>Follow us</h3>
 										<p>
 											<a href="#">Facebook</a>
@@ -88,12 +88,12 @@
 											<a href="#">Instagram</a>
 											<a href="#">TikTok</a>
 										</p>
-									</div>
+									</div> -->
 								</div>
 							</div>
 							<div class="col-lg-6 d-flex align-items-stretch">
 								<div class="info-wrap w-100 p-5 img" style="background-image: url(images/img.jpg);">
-			          </div>
+			         		 </div>
 							</div>
 						</div>
 					</div>
