--- a/index.html
+++ b/index.html
@@ -269,32 +269,41 @@
 
 <div class="position-relative overflow-hidden w-100 bg-light" id="gallery">
   <div class="container-fluid">
-  <div class="row overflow-scroll">
-    <div class="col-12">
-      <div class="row vw-100 px-0 py-vh-5 d-flex align-items-center scrollx">
-        <div class="col-md-2" data-aos="fade-up">
-            <img src="img/webp/interior37.webp" class="rounded shadow img-fluid" alt="nice gallery image" width="512" height="341">
-        </div>
+    <div class="row px-0 py-vh-5 d-flex align-items-center ">
 
-        <div class="col-md-2" data-aos="fade-up" data-aos-delay="200">
-            <img src="img/webp/people1.webp" class="img-fluid rounded shadow" alt="nice gallery image" width="1164" height="776">
-        </div>
+      <div class="col-md-3" data-aos="fade-up" data-aos-delay="200">
+        <img src="img/webp/build2.webp" class="img-fluid rounded shadow" alt="nice gallery image" >
+      </div>
+          
+      <div class="col-md-3" data-aos="fade-up" data-aos-delay="200">
+        <img src="img/webp/roof1.webp" class="img-fluid rounded shadow" alt="nice gallery image" >
+      </div>
 
-        <div class="col-md-3" data-aos="fade-up" data-aos-delay="400">
-            <img src="img/webp/people2.webp" class="img-fluid rounded shadow" alt="nice gallery image" width="844" height="1054">
-        </div>
+      <div class="col-md-3" data-aos="fade-up" data-aos-delay="400">
+          <img src="img/webp/person1.webp" class="img-fluid rounded shadow" alt="nice gallery image">
+      </div>
 
-        <div class="col-md-3" data-aos="fade-up" data-aos-delay="600">
-            <img src="img/webp/interior29.webp" class="img-fluid rounded shadow" alt="nice gallery image" width="844" height="562">
-        </div>
+      <div class="col-md-3" data-aos="fade-up" data-aos-delay="600">
+          <img src="img/webp/plas1.webp" class="img-fluid rounded shadow" alt="nice gallery image">
+      </div>
 
-        <div class="col-md-2" data-aos="fade-up" data-aos-delay="800">
-            <img src="img/webp/people23.webp" class="rounded shadow img-fluid" alt="nice gallery image" width="512" height="341">
-        </div>
+      <div class="col-md-3" data-aos="fade-up" data-aos-delay="800">
+          <img src="img/webp/brick2.webp" class="rounded shadow img-fluid" alt="nice gallery image" >
+      </div>
+
+      <div class="col-md-3" data-aos="fade-up" data-aos-delay="800">
+        <img src="img/webp/people5.webp" class="rounded shadow img-fluid" alt="nice gallery image" >
+      </div>
+
+      <div class="col-md-3" data-aos="fade-up" data-aos-delay="800">
+        <img src="img/webp/people23.webp" class="rounded shadow img-fluid" alt="nice gallery image">
+      </div>
+
+      <div class="col-md-3" data-aos="fade-up" data-aos-delay="800">
+        <img src="img/webp/build1.webp" class="rounded shadow img-fluid" alt="nice gallery image">
       </div>
     </div>
-   </div>
- </div>
+  </div>
 
 </div>
 
@@ -447,7 +456,7 @@
       <a class="nav-link link-secondary ps-0" aria-current="page" href="privacy-policy.pdf">Privacy Policy</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link link-secondary ps-0" aria-current="page" href="slavery-statement.pdf">Modern Slavery Statement</a>
+      <a class="nav-link link-secondary ps-0" aria-current="page" href="modern-slavery-statement.pdf">Modern Slavery Statement</a>
     </li>
   </ul>
 </div>
