--- a/index.html
+++ b/index.html
@@ -441,8 +441,8 @@
   <img src="img/logo.png" height="25px" width="auto">
   <address class="text-secondary mt-3">
     <strong>Ridgestone Developments Ltd</strong><br> 
-    135 Shooters Hill<br>
-    London, SE18 3SA<br>
+    124-128 City Rd<br>
+     London EC1V 2NJ<br>
     <abbr title="Phone">P:</abbr>
     +44 7985 107 830
   </address>
